# pipelines

./: .env.schema  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Jenkinsfile  README.md  gitlab-ci.yml  license_header.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-publish-bids-validator.yml  build-and-publish-dcmedit.yml  build-and-publish-filecopy.yml  cicd.yml  run-tests-bids-validator.yml  run-tests-dcmedit.yml  run-tests-filecopy.yml
bids-validator/: .dockerignore  .env.schema  Dockerfile  README.md  pyproject.toml
bids-validator/scripts/: config.py  database_service.py  locks.py  minio_client.py  validate_dataset.py
dcmedit/: Dockerfile  README.md  pyproject.toml
dcmedit/scripts/: config.py  dcm_edit.py  lock.py  logger.py  metadata_helper.py  minio_client.py  preprocess.py  utils.py
filecopy/: .dockerignore  Dockerfile  README.md  pyproject.toml
filecopy/operations/: __main__.py  app.py  config.py  duplicated_file_names.py  kafka_producer.py  managers.py  minio_boto3_client.py  minio_client.py  models.py  traverser.py
filecopy/operations/commands/: copy.py  delete.py
filecopy/operations/services/approval/: client.py  models.py
filecopy/operations/services/audit_trail/: client.py
filecopy/operations/services/cataloguing/: client.py
filecopy/operations/services/dataops/: client.py
filecopy/operations/services/dataops_utility/: client.py
filecopy/operations/services/lineage/: client.py
filecopy/operations/services/metadata/: __init__.py  client.py
filecopy/operations/services/provenance/: client.py
filecopy/tests/: conftest.py  test_duplicated_file_names.py  test_managers.py  test_models.py  test_traverser.py
filecopy/tests/fixtures/: __init__.py  commands.py  fake.py  node.py  services.py
filecopy/tests/services/approval/: test_client.py  test_models.py
filecopy/tests/services/audit_trail/: test_client.py
filecopy/tests/services/cataloguing/: test_client.py
filecopy/tests/services/dataops/: test_client.py
filecopy/tests/services/dataops_utility/: test_client.py
filecopy/tests/services/lineage/: test_client.py
filecopy/tests/services/metadata/: __init__.py  test_client.py
filecopy/tests/services/provenance/: test_client.py
freesurfer/: Dockerfile  build.sh  license.txt
