[tool.poetry]
name = "dcmedit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
minio="7.0.4"
requests="2.25.1"
python-dotenv="0.19.1"
pydantic="1.8.2"
uvicorn="0.12.3"
pilot-platform-common = "0.0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
